--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
 	"name": "@ronymmoura/react-reports",
 	"version": "0.0.1",
 	"main": "./dist/index.js",
-	"source": "./src/index.tsx",
+    "source": "./src/index.tsx",
+    "types": "./types/index.d.ts",
 	"author": {
 		"name": "Rony Moura",
 		"email": "ronymmoura@gmail.com"
@@ -31,16 +32,19 @@
 	"license": "SEE LICENSE IN LICENSE",
 	"dependencies": {
 		"@types/classnames": "^2.2.7",
-		"@types/node": "11.11.7",
-		"@types/react": "16.8.8",
+        "@types/node": "11.12.0",
+        "@types/react": "16.8.10",
+        "@types/react-dom": "16.8.3",
 		"classnames": "^2.2.6",
-		"react": "^16.8.5",
-		"react-dom": "^16.8.5",
-		"react-scripts": "2.1.8",
+        "react": "^16.8.6",
+        "react-dom": "^16.8.6",
+        "react-scripts": "2.1.8",
 		"typescript": "3.3.4000"
 	},
 	"scripts": {
-        "build": "yarn && yarn clean && tsc -d --declarationDir ./types",
+        "start": "react-scripts start",
+        "build": "yarn && yarn clean && tsc -d --declarationDir ./types && yarn copy",
+        "copy": "copy /Y src\\Report.css dist\\",
         "clean": "rmdir /s /q types && rmdir /s /q dist",
         "npm:publish": "yarn build && npm publish --access public"
 	},
