--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,32 @@
 {
-	"compilerOptions": {
-        "esModuleInterop": true,
-		"lib": [
-			"dom",
-			"esnext"
-		],
-        "module": "commonjs",
-        "outDir": "./dist",
-        "strict": true,
-        "target": "es5",
-        "noUnusedLocals": true,
-        "noUnusedParameters": true,
-        "noImplicitReturns": true,
-        "noFallthroughCasesInSwitch": true,
-        "jsx": "react"
-	},
-	"include": [
-		"src/**/*"
-	],
-    "exclude": [
-        "node_modules"
-    ]
+  "compilerOptions": {
+    "esModuleInterop": true,
+    "lib": [
+      "dom",
+      "esnext"
+    ],
+    "module": "esnext",
+    "outDir": "./dist",
+    "strict": true,
+    "target": "es5",
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+    "jsx": "preserve",
+    "allowJs": true,
+    "skipLibCheck": true,
+    "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true,
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true
+  },
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
