--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ronymmoura/react-reports",
-	"version": "0.0.3",
+	"version": "0.0.8",
 	"main": "./dist/index.js",
 	"source": "./src/test/index.tsx",
 	"types": "./types/index.d.ts",
@@ -31,16 +31,18 @@
 	],
 	"license": "SEE LICENSE IN LICENSE",
 	"dependencies": {
-		"@types/classnames": "^2.2.7",
-		"@types/node": "11.12.0",
-		"@types/react": "16.8.10",
 		"axios": "^0.18.0",
-		"classnames": "^2.2.6",
+		"classnames": "^2.2.6"
+    },
+    "peerDependencies": {
 		"react": "^16.8.6",
 		"react-scripts": "2.1.8",
         "typescript": "^3.4.3"
-	},
+    },
 	"devDependencies": {
+		"@types/classnames": "^2.2.7",
+		"@types/node": "11.12.0",
+		"@types/react": "16.8.10",
 		"@types/react-dom": "^16.8.3",
 		"bootstrap": "^4.3.1",
 		"gluegun": "^3.2.0",
@@ -48,7 +50,8 @@
 	},
 	"scripts": {
 		"start": "react-scripts start",
-		"build": "node build.js",
+        "build": "node build.js",
+        "prepublishOnly": "yarn build",
 		"npm:publish": "yarn build && npm publish --access public"
 	},
 	"eslintConfig": {
