--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,15 +13,12 @@
     "noUnusedParameters": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
-    "jsx": "preserve",
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "allowJs": true,
-    "isolatedModules": true,
-    "noEmit": true
+    "jsx": "react"
   },
   "include": [
     "src/index.tsx"
