--- a/package.json
+++ b/package.json
@@ -1,66 +1,66 @@
 {
-	"name": "@ronymmoura/react-reports",
-	"version": "0.0.8",
-	"main": "./dist/index.js",
-	"source": "./src/test/index.tsx",
-	"types": "./types/index.d.ts",
-	"author": {
-		"name": "Rony Moura",
-		"email": "ronymmoura@gmail.com"
-	},
-	"description": "【WIP】React components to create reports",
-	"readme": "https://github.com/ronymmoura/react-reports/blob/master/README.md",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/ronymmoura/react-reports"
-	},
-	"bugs": {
-		"url": "https://github.com/ronymmoura/react-reports/issues",
-		"email": "ronymmoura@gmail.com"
-	},
-	"keywords": [
-		"react",
-		"report",
-		"javascript",
-		"typescript",
-		"node",
-		"js",
-		"jsx",
-		"ts",
-		"tsx"
-	],
-	"license": "SEE LICENSE IN LICENSE",
-	"dependencies": {
-		"axios": "^0.18.0",
-		"classnames": "^2.2.6"
+    "name": "@ronymmoura/react-reports",
+    "version": "0.2.7",
+    "main": "./dist/index.js",
+    "source": "./src/test/index.tsx",
+    "types": "./types/index.d.ts",
+    "author": {
+        "name": "Rony Moura",
+        "email": "ronymmoura@gmail.com"
+    },
+    "description": "【WIP】React components to create reports",
+    "readme": "https://github.com/ronymmoura/react-reports/blob/master/README.md",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/ronymmoura/react-reports"
+    },
+    "bugs": {
+        "url": "https://github.com/ronymmoura/react-reports/issues",
+        "email": "ronymmoura@gmail.com"
+    },
+    "keywords": [
+        "react",
+        "report",
+        "javascript",
+        "typescript",
+        "node",
+        "js",
+        "jsx",
+        "ts",
+        "tsx"
+    ],
+    "license": "SEE LICENSE IN LICENSE",
+    "dependencies": {
+        "axios": "^0.18.0",
+        "classnames": "^2.2.6"
     },
     "peerDependencies": {
-		"react": "^16.8.6",
-		"react-scripts": "2.1.8",
+        "react": "^16.8.6",
+        "react-scripts": "2.1.8",
         "typescript": "^3.4.3"
     },
-	"devDependencies": {
-		"@types/classnames": "^2.2.7",
-		"@types/node": "11.12.0",
-		"@types/react": "16.8.10",
-		"@types/react-dom": "^16.8.3",
-		"bootstrap": "^4.3.1",
-		"gluegun": "^3.2.0",
-		"react-dom": "^16.8.6"
-	},
-	"scripts": {
-		"start": "react-scripts start",
+    "devDependencies": {
+        "@types/classnames": "^2.2.7",
+        "@types/node": "11.12.0",
+        "@types/react": "16.8.10",
+        "@types/react-dom": "^16.8.3",
+        "bootstrap": "^4.3.1",
+        "gluegun": "^3.2.0",
+        "react-dom": "^16.8.6"
+    },
+    "scripts": {
+        "start": "react-scripts start",
         "build": "node build.js",
         "prepublishOnly": "yarn build",
-		"npm:publish": "yarn build && npm publish --access public"
-	},
-	"eslintConfig": {
-		"extends": "react-app"
-	},
-	"browserslist": [
-		">0.2%",
-		"not dead",
-		"not ie <= 11",
-		"not op_mini all"
-	]
+        "postinstall": "node post-install.js"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": [
+        ">0.2%",
+        "not dead",
+        "not ie <= 11",
+        "not op_mini all"
+    ]
 }
