--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,33 @@
 {
-  "compilerOptions": {
-    "esModuleInterop": true,
-    "lib": [
-      "dom",
-      "esnext"
+    "compilerOptions": {
+        "esModuleInterop": true,
+        "lib": [
+            "dom",
+            "esnext"
+        ],
+        "module": "esnext",
+        "outDir": "./dist",
+        "strict": true,
+        "target": "es5",
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        "noImplicitReturns": true,
+        "noFallthroughCasesInSwitch": true,
+        "skipLibCheck": true,
+        "allowSyntheticDefaultImports": true,
+        "forceConsistentCasingInFileNames": true,
+        "moduleResolution": "node",
+        "resolveJsonModule": true,
+        "jsx": "react",
+        "allowJs": false,
+        "isolatedModules": false,
+        "noEmit": false
+    },
+    "include": [
+        "src/index.tsx"
     ],
-    "module": "esnext",
-    "outDir": "./dist",
-    "strict": true,
-    "target": "es5",
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    "skipLibCheck": true,
-    "allowSyntheticDefaultImports": true,
-    "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "jsx": "react"
-  },
-  "include": [
-    "src/index.tsx"
-  ],
-  "exclude": [
-    "node_modules",
-    "src/test"
-  ]
+    "exclude": [
+        "node_modules",
+        "src/test"
+    ]
 }
